[package]
name = "admin-checker"
version = "0.1.0"
edition = "2021"


[dependencies]
stellar-rpc-client = "=21.4.0"
stellar-xdr = { version = "21.1.0", default-features = true, features = [] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.64"
dirs = "4.0.0"
toml = "0.5.9"
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
